<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scan"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/about"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback"/>
        </menu>
    </item>

</menu>
